# project-constellation

Builders/: .gitignore  3d-visualization-demo.html  Architect.md  Builder-Identity.md  CLAUDE.md  COMPLETE_DEPLOYMENT_GUIDE.md  COOL_CONVERSATIONS_HIGHLIGHT_REEL.md  Catalyst.md  Claude-Builder-001.md  DEPLOYMENT_READINESS_REPORT.md  MARKETING_PROJECT_CONSTELLATION.md  MARKETING_RECURSIVE_SYSTEM.md  NEXUS_ACTIVITY_LOG.md  Nexus.md  PROJECT-CONSTELLATION-COMPLETE.md  PROJECT_CONSTELLATION_ANALYSIS.md  PROJECT_CONSTELLATION_DEMO.md  README.md  Synthesizer.md  THEME_EXPLOSION_100x.md  adaptive-skills-showcase.html  adaptive-theming-system.js  agent-collaboration-demo.html  agent-communication.js  agent-dashboard.md  agent-initialization.js  ai-research-division-conversation.md  chat-protocol.js  complete-deployment-package.js  conversation-data.js  conversation-manager.js  conversation-summary.md  conversation-tracker.js  conversation.md  convos.md  cosmic-expansion-session.html  creative-ux-powerhouse-conversation.md  demo.js  enhanced-demo.js  enhanced-portfolio-live.html  (+32 more)
NeuroCalc/: .gitignore  Makefile  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_IMPLEMENTED.md  PERFORMANCE_OPTIMIZATION_PLAN_V2.md  PERFORMANCE_OPTIMIZATION_ROUND_2_SUMMARY.md  package-lock.json  package.json  tsconfig.json  verify-dev-setup.sh  webpack.config.js
TLI/: .gitignore  CLAUDE.md  Cargo.toml  README.md
TLI/src/: main.rs  storage.rs  task.rs
TLI/src/commands/: add.rs  complete.rs  delete.rs  list.rs  mod.rs  next.rs  show.rs
TextReceiver/: .gitignore  README.md  package.json
(+88 files in other folders)
