[package]
name = "tli"
version = "0.1.0"
edition = "2021"
description = "Task List Interface - A cousin of CLI for task management"
authors = ["Josh Kornreich"]
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
